improved java 8 compatability